frontend/test/should_pass/exectype_AssignElemToVar.grg
using exectype;

rule r
{
	modify  {
		exec({x:A=@(lalala)});
		exec({x:A=@("lalala")});
	}
}