frontend/test/should_fail/exectype_AssignVarToVar.grg
using exectype;

rule r
{
	modify  {
		exec(x:A=::varia && y:AA=::vario && y=x);
	}
}